--- a/index.html
+++ b/index.html
@@ -6,9 +6,38 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/styles.css" />
     </head>
     <body>
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
+        <header class="header-home">
+
+            <div class="header-content-container">
+                <div class="navigation-wrapper">
+                    <nav class="top-bar-faded">
+                        <div class="top-bar-section">
+                            <ul>
+                                <li class="page_item page-item-2884"><a href="">Henna</a></li>
+                                <li class="page_item page-item-2885"><a href="">Bridal</a></li>
+                                <li class="page_item page-item-2886"><a href="">Hair</a></li>
+                                <li class="page_item page-item-2935"><a href="">Products</a></li>
+                                <li class="page_item page-item-2887"><a href="">FAQ</a></li>
+                                <li class="page_item page-item-2888"><a href="">Gallery</a></li>
+                                <li class="page_item page-item-2889"><a href="">Contact</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+                <div class="header-company-wrapper">
+                </div>
+
+            </div>
+            <div class="header-image-container-dark-bg">
+
+            </div>
+
+
+        </header>
         <script src="" async defer></script>
     </body>
 </html>
