Revamp of code style
Added a navbar in front of the background image

--- a/index.html
+++ b/index.html
@@ -9,35 +9,31 @@
         <link rel="stylesheet" href="/styles.css" />
     </head>
     <body>
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet" type="text/css">
-        <header class="header-home">
+        <div class="bg-img">
+            <div class="container">
+              <div class="topnav">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#home">Henna</a></li>
+                    <li><a href="#news">Bridal</a></li>
+                    <li><a href="#contact">Makeup</a></li>
+                    <li><a href="#about">Hair</a></li>
+                    <li><a href="#home">FAQ</a></li>
+                    <li><a href="#home">Gallery</a></li>
+                    <li><a href="#home">Contact</a></li>
 
-            <div class="header-content-container">
-                <div class="navigation-wrapper">
-                    <nav class="top-bar-faded">
-                        <div class="top-bar-section">
-                            <ul>
-                                <li class="page_item page-item-2884"><a href="">Henna</a></li>
-                                <li class="page_item page-item-2885"><a href="">Bridal</a></li>
-                                <li class="page_item page-item-2886"><a href="">Hair</a></li>
-                                <li class="page_item page-item-2935"><a href="">Products</a></li>
-                                <li class="page_item page-item-2887"><a href="">FAQ</a></li>
-                                <li class="page_item page-item-2888"><a href="">Gallery</a></li>
-                                <li class="page_item page-item-2889"><a href="">Contact</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-                <div class="header-company-wrapper">
-                </div>
-
+                </ul>
+              </div>
+              <div class="name-header">
+                <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
+                <P>Women's hair and makeup salon</P>
+                    <p class="Call-us">Call us:
+                    <a class="contact-phone-" href="tel:+16476695739?id=119164154">647-669-5739</a>
+                    <P class="location">Located in Brampton,ON</P>
+              </div>
             </div>
-            <div class="header-image-container-dark-bg">
-
-            </div>
-
-
-        </header>
-        <script src="" async defer></script>
+          </div>
+        <script src="script.js" async defer></script>
+        hi hi hi hih i
     </body>
 </html>
