Background image transition
Background image transitions but is a bit choppy

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Raleway&family=Varela+Round&display=swap" rel="stylesheet">
         <meta charset="utf-8">
+        <style> @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Varela+Round&display=swap'); </style>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
@@ -26,10 +28,10 @@
               </div>
               <div class="name-header">
                 <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
-                <P>Women's hair and makeup salon</P>
+                <P class = "subheader">Women's hair and makeup salon</P>
                     <p class="Call-us">Call us:
                     <a class="contact-phone-" href="tel:+16476695739?id=119164154">647-669-5739</a>
-                    <P class="location">Located in Brampton,ON</P>
+                    <P class="location">Located in Brampton</P>
               </div>
             </div>
           </div>
