Finished entrance page
Finished entrance page, on about us section

--- a/index.html
+++ b/index.html
@@ -30,12 +30,26 @@
                 <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
                 <P class = "subheader">Women's hair and makeup salon</P>
                     <p class="Call-us">Call us:
-                    <a class="contact-phone-" href="tel:+16476695739?id=119164154">647-669-5739</a>
-                    <P class="location">Located in Brampton</P>
+                    <a class="contact-phone" href="tel:+16476695739?id=119164154">647-669-5739</a>
               </div>
             </div>
           </div>
         <script src="script.js" async defer></script>
-        hi hi hi hih i
-    </body>
+          <div class="Location-header">
+            <P class="location">Located in Brampton</P>
+          </div>
+          <div class="First-para-home">
+            <div class="About-us">
+              <div class="title">
+              <h1>About us</h1>
+              <hr class="under-title">
+              
+              <p>We are an independent, woman owned business that is dedicated to ensuring our client's best looks and health.
+                We provide a wide range of services for casual to special occasions that will make you feel luxurious as well as rejuvenated.
+              </p>
+            </div>
+            <img src="image4.jpg">
+            </div>
+          </div>
+      </body>
 </html>
