Services home page
Finished services home page with buttons and descriptions

--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
               <div class="title">
               <h1>About us</h1>
               <hr class="under-title">
-              
               <p>We are an independent, woman owned business that is dedicated to ensuring our client's best looks and health.
                 We provide a wide range of services for casual to special occasions that will make you feel luxurious as well as rejuvenated.
               </p>
@@ -51,5 +50,44 @@
             <img src="image4.jpg">
             </div>
           </div>
+          <div class="services-home">
+            <h1 class="services-title">Our services</h1>
+            <hr class="services-line">
+            <p class="under-services-title">Dedicated to enhance your look</p>
+            <div class="outer-container">
+              <div class="table-of-services">
+                <div class="henna-column">
+                  <img src="image5.jpeg">
+                  <h1 class="henna-title">Henna</h1>
+                  <p class="henna-description">A variety of beautiful and aesthetic designs with natural and organic henna cones</p>
+                  <button class="henna-button">Learn more</button>
+                </div>
+                <div class="bridal-column">
+                  <img src="image7.jpeg">
+                  <h1 class="bridal-title">Bridal</h1>
+                  <p class="bridal-description">Long-lasting professional makeup and hair that will forever enhance your wedding photographs</p>
+                  <button class="bridal-button">Learn more</button>
+                </div>
+                <div class="hair-column">
+                  <img src="image6.jpeg">
+                  <h1 class="hair-title">Hair</h1>
+                  <p class="hair-description">Personalized hair-care and treatment done with the best products and hands</p>
+                  <button class="henna-button">Learn more</button>
+                </div>
+                <div class="makeup-column">
+                  <img src="image8.jpg">
+                  <h1 class="makeup-title">Makeup</h1>
+                  <p class="makeup-description">Eye-catching elegant makeup to make you look flashy and give your dream look</p>
+                  <button class="makeup-button">Learn more</button>
+                </div>
+              </div>
+afasfasfasfas
+
+
+
+
+            </div>
+
+            </div>
       </body>
 </html>
