--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="services-home">
             <h1 class="services-title">Our services</h1>
             <hr class="services-line">
-            <p class="under-services-title">Dedicated to enhance your look</p>
+            <p class="under-services-title">Dedicated to enhance and elevate your look</p>
             <div class="outer-container">
               <div class="table-of-services">
                 <div class="henna-column">
