Completed home page
Home page fully completed

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <li><a href="#news">Bridal</a></li>
                     <li><a href="#contact">Makeup</a></li>
                     <li><a href="#about">Hair</a></li>
-                    <li><a href="#home">FAQ</a></li>
                     <li><a href="#home">Gallery</a></li>
                     <li><a href="#home">Contact</a></li>
 
@@ -43,8 +42,8 @@
               <div class="title">
               <h1>About us</h1>
               <hr class="under-title">
-              <p>We are an independent, woman owned business that is dedicated to ensuring our client's best looks and health.
-                We provide a wide range of services for casual to special occasions that will make you feel luxurious as well as rejuvenated.
+              <p>I am a passionate henna, makeup, and hair artist with over 25 years of professional experience that is dedicated to ensuring my client's best looks and health.
+                I provide a wide range of services for casual to special occasions that will make you feel luxurious as well as rejuvenated.
               </p>
             </div>
             <img src="image4.jpg">
@@ -81,13 +80,13 @@
                   <button class="makeup-button">Learn more</button>
                 </div>
               </div>
-afasfasfasfas
-
-
-
-
             </div>
-
             </div>
+             <div class="contact-header">
+            <a class="contact-anchor">Contact us here!</a>
+          </div>
+          <div class="footer">
+            <p class="author">Designed by Anas Khan</p>
+          </div>
       </body>
 </html>
