--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="container">
               <div class="topnav">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#home">Henna</a></li>
+                    <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
+                    <li><a href="http://127.0.0.1:5500/henna.html">Henna</a></li>
                     <li><a href="#news">Bridal</a></li>
                     <li><a href="#contact">Makeup</a></li>
                     <li><a href="#about">Hair</a></li>
@@ -59,7 +59,9 @@
                   <img src="image5.jpeg">
                   <h1 class="henna-title">Henna</h1>
                   <p class="henna-description">A variety of beautiful and aesthetic designs with natural and organic henna cones</p>
-                  <button class="henna-button">Learn more</button>
+                  <a href="http://127.0.0.1:5500/henna.html">
+                  <button href="http://127.0.0.1:5500/index.html" class="henna-button">Learn more</button>
+                </a>
                 </div>
                 <div class="bridal-column">
                   <img src="image7.jpeg">
