--- a/henna.html
+++ b/henna.html
@@ -18,6 +18,27 @@
             <li><a href="#home">Contact</a></li>
         </ul>
     </div>
+    <div class="hennabody">
+        <h1 class="title">Henna</h1>
+        <div class="descriptioncontainer">
+            <div class="rightsideimage">
+            <img src="Hennacollage1.png">
+            </div>
+            <div class="leftsidetext">
+            <h1>Beautiful party henna designs!</h1>
+            <p>A huge variety of floral and cultural designs of henna that are sure to make you stand out at any party. Applied using organic and natural skin-safe henna cones only. Perfect for any formal party or occasions.</p>
+            </div>
+        </div>
+
+
+    </div>
+    <div class="contact-header">
+        <a class="contact-anchor">Contact us here!</a>
+      </div>
+      <div class="footer">
+        <p class="author">Designed by Anas Khan</p>
+      </div>
+
   
 </body>
 </html>
