--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
                     <li><a href="http://127.0.0.1:5500/henna.html">Henna</a></li>
-                    <li><a href="#news">Bridal</a></li>
+                    <li><a href="http://127.0.0.1:5500/bridal.html">Bridal</a></li>
                     <li><a href="#contact">Makeup</a></li>
                     <li><a href="#about">Hair</a></li>
                     <li><a href="#home">Gallery</a></li>
