--- a/bridal.html
+++ b/bridal.html
@@ -4,18 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/hennastyles.css" /> 
-    <title>Document</title>
+    <title>Bridal</title>
 </head>
 <body>
     <div class="name-header">
         <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
         <ul class="navbar">
-            <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a href="#news">Henna</a></li>
-            <li><a href="#contact">Makeup</a></li>
-            <li><a href="#about">Hair</a></li>
-            <li><a href="#home">Gallery</a></li>
-            <li><a href="#home">Contact</a></li>
+            <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
+            <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
+            <li><a href="https://humairamakeup.netlify.app/makeup.html">Makeup</a></li>
+            <li><a href="https://humairamakeup.netlify.app/hair.html">Hair</a></li>
+            <li><a href="https://humairamakeup.netlify.app/gallery.html">Gallery</a></li>
+            <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="hennabody">
@@ -33,7 +33,7 @@
 
     </div>
     <div class="contact-header">
-        <a class="contact-anchor">Contact us here!</a>
+        <a href="https://humairamakeup.netlify.app/contact.html" class="contact-anchor">Contact us here!</a>
       </div>
       <div class="footer">
         <p class="author">Designed by Anas Khan</p>
