--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <style> @import url('https://fonts.googleapis.com/css2?family=Raleway&family=Varela+Round&display=swap'); </style>
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>Home</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="/styles.css" />
@@ -16,14 +16,13 @@
               
               <div class="topnav">
                 <ul>
-                    <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-                    <li><a href="http://127.0.0.1:5500/henna.html">Henna</a></li>
-                    <li><a href="http://127.0.0.1:5500/bridal.html">Bridal</a></li>
-                    <li><a href="#contact">Makeup</a></li>
-                    <li><a href="#about">Hair</a></li>
-                    <li><a href="#home">Gallery</a></li>
-                    <li><a href="#home">Contact</a></li>
-
+                    <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/bridal.html">Bridal</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/makeup.html">Makeup</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/hair.html">Hair</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/gallery.html">Gallery</a></li>
+                    <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
                 </ul>
               </div>
               <div class="name-header">
@@ -64,8 +63,8 @@
                   <img src="image5.jpeg">
                   <h1 class="henna-title">Henna</h1>
                   <p class="henna-description">A variety of beautiful and aesthetic designs with natural and organic henna cones</p>
-                  <a href="http://127.0.0.1:5500/henna.html">
-                  <button href="http://127.0.0.1:5500/index.html" class="henna-button">Learn more</button>
+                  <a href="https://humairamakeup.netlify.app/henna.html">
+                  <button href="https://humairamakeup.netlify.app/henna.html" class="henna-button">Learn more</button>
                 </a>
                 </div>
 
@@ -73,30 +72,32 @@
                   <img src="image7.jpeg">
                   <h1 class="bridal-title">Bridal</h1>
                   <p class="bridal-description">Long-lasting professional makeup and hair that will forever enhance your wedding photographs</p>
-                  <button class="bridal-button">Learn more</button>
+                  <a href="https://humairamakeup.netlify.app/bridal.html">
+                    <button href="https://humairamakeup.netlify.app/bridal.html" class="henna-button">Learn more</button>
+                  </a>
                 </div>
 
                 <div class="content-column">
                   <img src="image6.jpeg">
                   <h1 class="hair-title">Hair</h1>
                   <p class="hair-description">Personalized hair-care and treatment done with the best products and hands</p>
-                  <button class="henna-button">Learn more</button>
+                  <a href="https://humairamakeup.netlify.app/hair.html">
+                    <button href="https://humairamakeup.netlify.app/hair.html" class="henna-button">Learn more</button>
+                  </a>
                 </div>
 
                 <div class="content-column">
                   <img src="image8.jpg">
                   <h1 class="makeup-title">Makeup</h1>
                   <p class="makeup-description">Eye-catching elegant makeup to make you look flashy and give your dream look</p>
-                  <button class="makeup-button">Learn more</button>
+                  <a href="https://humairamakeup.netlify.app/makeup.html">
+                    <button href="https://humairamakeup.netlify.app/makeup.html" class="henna-button">Learn more</button>
+                  </a>
                 </div>
-
               </div>
-
-         
-
           </div>
              <div class="contact-header">
-            <a class="contact-anchor">Contact us here!</a>
+            <a href="https://humairamakeup.netlify.app/contact.html" class="contact-anchor">Contact us here!</a>
           </div>
           <div class="footer">
             <p class="author">Designed by Anas Khan</p>
