--- a/Makeup.html
+++ b/Makeup.html
@@ -4,18 +4,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/hennastyles.css" /> 
-    <title>Document</title>
+    <title>Makeup</title>
 </head>
 <body>
     <div class="name-header">
         <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
         <ul class="navbar">
-            <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a href="#news">Henna</a></li>
-            <li><a href="#contact">Bridal</a></li>
-            <li><a href="#about">Hair</a></li>
-            <li><a href="#home">Gallery</a></li>
-            <li><a href="#home">Contact</a></li>
+            <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
+            <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
+            <li><a href="https://humairamakeup.netlify.app/bridal.html">Bridal</a></li>
+            <li><a href="https://humairamakeup.netlify.app/hair.html">Hair</a></li>
+            <li><a href="https://humairamakeup.netlify.app/gallery.html">Gallery</a></li>
+            <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="hennabody">
@@ -25,15 +25,15 @@
             <img src="bridalcollage.png">
             </div>
             <div class="leftsidetext">
-            <h1>Make your special day even more special!</h1>
-            <p>Your wedding day is one of the most important days of your life. Alleviate your stress with our unique and high quality bridal services. Ensure a look that will make you stand out with our unique and personalized colour pallettes.</p>
+            <h1>Elevate your look to stand out!</h1>
+            <p>Turn heads at any party with our stylish and unique makeup looks that will suit you perfectly. Get professionally-applied makeup for many different occasions such as weddings, proms, and even just for clients who would like it done for their day to day life. .</p>
         </div>
         </div>
 
 
     </div>
     <div class="contact-header">
-        <a class="contact-anchor">Contact us here!</a>
+        <a href="https://humairamakeup.netlify.app/contact.html" class="contact-anchor">Contact us here!</a>
       </div>
       <div class="footer">
         <p class="author">Designed by Anas Khan</p>
