Updated all pages with descriptions

--- a/Hair.html
+++ b/Hair.html
@@ -10,23 +10,23 @@
     <div class="name-header">
         <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
         <ul class="navbar">
-            <li><a href="http://127.0.0.1:5500/index.html">Home</a></li>
-            <li><a href="#news">Henna</a></li>
-            <li><a href="#contact">Bridal</a></li>
-            <li><a href="#about">Makeup</a></li>
-            <li><a href="#home">Gallery</a></li>
-            <li><a href="#home">Contact</a></li>
+            <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
+            <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
+            <li><a href="https://humairamakeup.netlify.app/bridal.html">Bridal</a></li>
+            <li><a href="https://humairamakeup.netlify.app/makeup.html">Makeup</a></li>
+            <li><a href="https://humairamakeup.netlify.app/gallery.html">Gallery</a></li>
+            <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
         </ul>
     </div>
     <div class="hennabody">
         <h1 class="title">Hair</h1>
         <div class="descriptioncontainer">
             <div class="rightsideimage">
-            <img src="bridalcollage.png">
+            <img src="haircollage1.png">
             </div>
             <div class="leftsidetext">
-            <h1>Make your special day even more special!</h1>
-            <p>Your wedding day is one of the most important days of your life. Alleviate your stress with our unique and high quality bridal services. Ensure a look that will make you stand out with our unique and personalized colour pallettes.</p>
+            <h1>Rejuvenate your hair and look!</h1>
+            <p>Hair colouring, treatment, cutting, and styling done with the latest and well known products that leave your hair conditioned, fresh and eye-catchingly shiny.</p>
         </div>
         </div>
 
