--- a/Makeup.html
+++ b/Makeup.html
@@ -22,7 +22,7 @@
         <h1 class="title">Makeup</h1>
         <div class="descriptioncontainer">
             <div class="rightsideimage">
-            <img src="bridalcollage.png">
+            <img src="makeupcollage.png">
             </div>
             <div class="leftsidetext">
             <h1>Elevate your look to stand out!</h1>
