--- a/gallery.html
+++ b/gallery.html
@@ -7,5 +7,17 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="name-header">
+        <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
+        <ul class="navbar">
+            <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
+            <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
+            <li><a href="https://humairamakeup.netlify.app/bridal.html">Bridal</a></li>
+            <li><a href="https://humairamakeup.netlify.app/makeup.html">Makeup</a></li>
+            <li><a href="https://humairamakeup.netlify.app/hair.html">Hair</a></li>
+            <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
+        </ul>
+    </div>
+    
 </body>
 </html>
