--- a/gallery.html
+++ b/gallery.html
@@ -4,11 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/hennastyles.css" /> 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="anotherscript.js"></script>
     <title>Document</title>
 </head>
 <body>
     <div class="name-header">
-        <h1 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
+        <h2 class="header-company-title">Humaira Makeup, Hair, And Henna</h1>
         <ul class="navbar">
             <li><a href="https://humairamakeup.netlify.app/index.html">Home</a></li>
             <li><a href="https://humairamakeup.netlify.app/henna.html">Henna</a></li>
@@ -18,6 +20,114 @@
             <li><a href="https://humairamakeup.netlify.app/contact.html">Contact</a></li>
         </ul>
     </div>
-    
+
+    <input type="radio" name="Photos" id="design1" checked>
+    <input type="radio" name="Photos" id="design2">
+    <input type="radio" name="Photos" id="design3">
+    <input type="radio" name="Photos" id="design4">
+
+    <div class="container">
+        <h1>OUR DESIGNS</h1>
+        <div class="top-content">
+            <h3>Designs</h3>
+            <label for="design1">All Photos</label>
+            <label for="design2">Hair Styles</label>
+            <label for="design3">Makeup</label>
+            <label for="design4">Henna Designs</label>
+        </div>
+        
+        <div class = "gallery-photos">
+            <div class="pic henna">
+                <img src="gallery/Henna1.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna2.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna3.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna4.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna5.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna6.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna7.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna8.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna9.png">
+            </div>
+            <div class="pic henna">
+                <img src="gallery/Henna10.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles1.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles2.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles3.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles4.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles5.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Hairstyles6.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Addhere.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Addhere.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Addhere.png">
+            </div>
+            <div class="pic hair">
+                <img src="gallery/Addhere.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup1.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup2.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup3.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup4.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup5.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup6.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup7.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Makeup8.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Addhere.png">
+            </div>
+            <div class="pic makeup">
+                <img src="gallery/Addhere.png">
+            </div>
+        </div>        
+    </div>
 </body>
 </html>
